tarot card to tarot reader text change

--- a/newsletter.html
+++ b/newsletter.html
@@ -35,7 +35,7 @@
             <li>Astrology Cheatsheet</li>
             <li>Oracle Card Showcase</li>
             <li>Magick Password Generator</li>
-            <li>Tarot Card App</li>
+            <li>Tarot Reader App</li>
             <li>Digital Book of Spells</li>
           </ul>
           <p>Experienced spiritual technologist, aspiring creative coder, or curious artist, all are welcome.</p>
