opened up audience text

--- a/newsletter.html
+++ b/newsletter.html
@@ -38,7 +38,7 @@
             <li>Tarot Reader App</li>
             <li>Digital Book of Spells</li>
           </ul>
-          <p>Experienced spiritual technologist, aspiring creative coder, or curious artist, all are welcome.</p>
+          <p>Experienced spiritual technologist, artist aspiring to be a coder, or curious creative, all are welcome.</p>
         </div>
       </article>
     </main>
