renamed courses to tutorials to be more accessible

--- a/tutorials/index.html
+++ b/tutorials/index.html
@@ -13,11 +13,11 @@
       <header class="page-header">
         <h1>Learn Technomancy</h1>
       </header>
-      <div id="courses"></div>
+      <div id="tutorials"></div>
       <div id="pagination"></div>
     </main>
   </div>
   <script defer src="/scripts/load-header.js"></script>
-  <script defer src="/scripts/load-courses.js" type="module"></script>
+  <script defer src="/scripts/load-tutorials.js" type="module"></script>
 </body>
 </html>
