change how to join to how to post

--- a/tutorials/how-to-join-mysticwarez/index.html
+++ b/tutorials/how-to-join-mysticwarez/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mysticwarez - How to join Mysticwarez</title>
+  <title>Mysticwarez - How to post to Mysticwarez</title>
   <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
@@ -14,7 +14,7 @@
       </a>
     </header>
     <main class="site-main">
-      <h1 class="page-header">How to join Mysticwarez</h1>
+      <h1 class="page-header">How to post to Mysticwarez</h1>
       <article>
         <img src="/tutorials/how-to-join-mysticwarez/images/cover.png" class="cover-image">
       </article>
