course navigation doesnt affect history

--- a/tutorials/how-to-join-mysticwarez/index.html
+++ b/tutorials/how-to-join-mysticwarez/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="page">
     <header class="site-header back-header">
-      <a id="back-link" href="/tutorials">
+      <a onclick="history.back(); return false;" id="back-link" href="/tutorials">
         <span class="back-button">&#x25c0;</span> <div class="logo"></div>
       </a>
     </header>
