update discord invite

--- a/tutorials/how-to-join-mysticwarez/index.html
+++ b/tutorials/how-to-join-mysticwarez/index.html
@@ -31,7 +31,7 @@
             <li>Upload it to the site (with Github again)</li>
           </ol>
           <p>This tutorial will guide you through each step. Posting should take about 30 or 45 minutes, depending on your speed. Taking breaks is OK.</p>
-          <p>If you get stuck, don't tear your hair out—ask for a helping hand on <a href="https://discord.gg/YJSd4eFuRN" target="_blank">the Discord</a> or <a href="#replies">leave a reply</a> on this page. We're very friendly!</p>
+          <p>If you get stuck, don't tear your hair out—ask for a helping hand on <a href="https://discord.gg/zqrK5ZDxZF" target="_blank">the Discord</a> or <a href="#replies">leave a reply</a> on this page. We're very friendly!</p>
           <p>Our philosophy is to learn as we go. So, let's get started.</p>
         </div>
       </article>
@@ -151,7 +151,7 @@
           <p>When it asks what you want to do with your changed files, click the second option—<strong>Bring my changes to <code>welcome-your-username-here</code></strong>.</p>
           <div class="callout">
             <h3>🌿 Branching out</h3>
-            <p>This step can pass by quickly. If you make a mistake, feel free to ask for a helping hand on <a href="https://discord.gg/YJSd4eFuRN" target="_blank">the Discord</a> or <a href="#replies">leave a reply</a> on this page.</p>
+            <p>This step can pass by quickly. If you make a mistake, feel free to ask for a helping hand on <a href="https://discord.gg/zqrK5ZDxZF" target="_blank">the Discord</a> or <a href="#replies">leave a reply</a> on this page.</p>
           </div>
           <p>Now that you've changed your current branch (you should see a new name on the "Current Branch" block) it's time to <strong>commit</strong> changes, and then <strong>push</strong> them.</p>
           <div class="callout">
