count all visitors ?

--- a/tutorials/how-to-join-mysticwarez/index.html
+++ b/tutorials/how-to-join-mysticwarez/index.html
@@ -178,5 +178,6 @@
   </a>
   <script defer src="/scripts/load-utterances.js" type="module"></script>
   <script defer src="/scripts/load-back-header.js" type="module"></script>
+  <script defer src="/scripts/live-visitor-count.js" type="module"></script>
 </body>
 </html>
